[project]
name = "tts-data-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "joblib>=1.4.2",
    "jsonlines>=4.0.0",
    "soundfile>=0.13.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
]
